--- a/index.html
+++ b/index.html
@@ -211,33 +211,50 @@
 </html>
 <section>
   <!-- OYUN ALANI (sayfa 2) -->
-<!-- OYUN ALANI (sayfa 2) -->
-<section id="flappySection" style="height: 100vh; background: #222; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+<section id="flappySection" style="height: 100vh; background: linear-gradient; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
 
-  <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 90vw;"></canvas>
+  <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; background: u1ZpVC.png; max-width: 90vw;"></canvas>
+
 
   <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
     Score: <span id="score">0</span>
   </div>
 </section>
+<script>
+  <script>
+  const canvas = document.getElementById("flappyCanvas");
+  const ctx = canvas.getContext("2d");
 
+  let score = 0;
+  let isPlaying = true;
+
+  function draw() {
+    if (!isPlaying) return;
+
+    // Temel Arka Plan (ileride değişecek)
+    ctx.fillStyle = "#c2e9fb";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    // Skoru güncelle
+    document.getElementById("score").textContent = score;
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+</script>
 <script>
   const canvas = document.getElementById("flappyCanvas");
   const ctx = canvas.getContext("2d");
 
   const nyanImg = new Image();
-  nyanImg.src = "nyan-cat.gif";
-
-  const bgImage = new Image();
-  bgImage.src = "u1ZpVC.png";
-
-  let bgX = 0;
-  const scrollSpeed = 2;
+  nyanImg.src = "nyan-cat.gif"; // senin dosya adın neyse o olsun
 
   let score = 0;
   let isPlaying = true;
 
+  // Karakterin başlangıç konumu
   let nyan = {
     x: 50,
     y: 150,
@@ -248,24 +265,7 @@
     jumpStrength: -10
   };
 
-  // Engellerin temeli hazır
-  const pipes = [];
-  const pipeWidth = 60;
-  const pipeGap = 150;
-  const pipeSpeed = 2;
-  const pipeInterval = 140; // frame cinsinden
-
-  let frameCount = 0;
-
-  function addPipe() {
-    const topHeight = Math.random() * (canvas.height - pipeGap - 100) + 50;
-    pipes.push({
-      x: canvas.width,
-      top: topHeight,
-      bottom: topHeight + pipeGap
-    });
-  }
-
+  // Kontrol: Space + Touch
   document.addEventListener("keydown", (e) => {
     if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
   });
@@ -277,57 +277,25 @@
   function draw() {
     if (!isPlaying) return;
 
-    // Scroll arka plan
-    bgX -= scrollSpeed;
-    if (bgX <= -canvas.width) bgX = 0;
-    ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
-    ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
+    // Arka plan
+    ctx.fillStyle = "#c2e9fb";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-    // Engeller
-    for (let i = 0; i < pipes.length; i++) {
-      const p = pipes[i];
-      p.x -= pipeSpeed;
-
-      // Üst boru
-      ctx.fillStyle = "#7fcd91";
-      ctx.fillRect(p.x, 0, pipeWidth, p.top);
-
-      // Alt boru
-      ctx.fillStyle = "#7fcd91";
-      ctx.fillRect(p.x, p.bottom, pipeWidth, canvas.height - p.bottom);
-
-      // Çarpışma
-      if (
-        nyan.x < p.x + pipeWidth &&
-        nyan.x + nyan.width > p.x &&
-        (nyan.y < p.top || nyan.y + nyan.height > p.bottom)
-      ) {
-        isPlaying = false;
-        alert("Çarptın! Skor: " + score);
-      }
-
-      // Skor arttırma (her boruyu geçince 1 puan)
-      if (p.x + pipeWidth === nyan.x) {
-        score++;
-      }
-    }
-
-    // Nyan fiziği
+    // Karakter fiziği
     nyan.velocity += nyan.gravity;
     nyan.y += nyan.velocity;
 
-    if (nyan.y + nyan.height >= canvas.height || nyan.y <= 0) {
+    // Yere çarpma kontrolü
+    if (nyan.y + nyan.height >= canvas.height) {
       isPlaying = false;
-      alert("Yere çarptın! Skor: " + score);
+      alert("Oyun bitti! Skor: " + score);
     }
 
+    // Nyan Cat çiz
     ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
-    document.getElementById("score").textContent = score;
 
-    frameCount++;
-    if (frameCount % pipeInterval === 0) {
-      addPipe();
-    }
+    // Skoru göster
+    document.getElementById("score").textContent = score;
 
     requestAnimationFrame(draw);
   }
