--- a/index.html
+++ b/index.html
@@ -256,30 +256,31 @@
   });
 
   function draw() {
-    if (!isPlaying) return;
+  if (!isPlaying) return;
 
-    // Arka plan scroll
+  // Arka plan resmi yüklendiyse çiz
+  if (bgImage.complete) {
     bgX -= scrollSpeed;
     if (bgX <= -canvas.width) bgX = 0;
     ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
     ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
-
-    // Karakter fiziği
-    nyan.velocity += nyan.gravity;
-    nyan.y += nyan.velocity;
-
-    if (nyan.y + nyan.height >= canvas.height) {
-      isPlaying = false;
-      alert("Oyun bitti! Skor: " + score);
-    }
-
-    ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
-
-    // Skoru güncelle
-    document.getElementById("score").textContent = score;
-
-    requestAnimationFrame(draw);
   }
 
+  // Karakter fiziği
+  nyan.velocity += nyan.gravity;
+  nyan.y += nyan.velocity;
+
+  if (nyan.y + nyan.height >= canvas.height) {
+    isPlaying = false;
+    alert("Oyun bitti! Skor: " + score);
+  }
+
+  ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
+  document.getElementById("score").textContent = score;
+
+  requestAnimationFrame(draw);
+}
+
+  
   draw();
 </script>
