--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+# Combining and presenting the full HTML with the game canvas and obstacles integrated
+
+html_code = """
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,16 +13,17 @@
       margin: 0;
       padding: 0;
       min-height: 100%;
-      height: auto;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
     }
+
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
@@ -27,6 +31,7 @@
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
     }
+
     #topTitle {
       font-family: 'Abril Fatface', cursive;
       font-size: 3.5rem;
@@ -34,6 +39,7 @@
       animation: colorShift 8s ease-in-out infinite;
       text-align: center;
     }
+
     #nyanZone {
       position: absolute;
       top: 170px;
@@ -41,6 +47,7 @@
       transform: translateX(-50%);
       z-index: 99;
     }
+
     #nyanCat {
       width: 240px;
     }
@@ -59,24 +66,6 @@
   <div id="nyanZone">
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
-
-  <!-- GÖRSEL ALAN -->
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    </div>
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
-        <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    </div>
-  </section>
 
   <!-- OYUN ALANI -->
   <section id="flappySection" style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
@@ -102,6 +91,7 @@
 
     let score = 0;
     let isPlaying = true;
+    let frameCount = 0;
 
     const nyan = {
       x: 50,
@@ -112,6 +102,11 @@
       gravity: 0.6,
       jumpStrength: -10
     };
+
+    let pipes = [];
+    const pipeWidth = 60;
+    const pipeGap = 150;
+    const pipeFrequency = 90;
 
     document.addEventListener("keydown", (e) => {
       if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
@@ -126,9 +121,39 @@
 
       bgX -= scrollSpeed;
       if (bgX <= -canvas.width) bgX = 0;
-
       ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
       ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
+
+      // Yeni boru oluştur
+      frameCount++;
+      if (frameCount % pipeFrequency === 0) {
+        let topHeight = Math.floor(Math.random() * (canvas.height - pipeGap - 100)) + 20;
+        let bottomY = topHeight + pipeGap;
+        pipes.push({ x: canvas.width, top: topHeight, bottom: bottomY });
+      }
+
+      // Engelleri çiz
+      ctx.fillStyle = "#00ff99";
+      for (let i = 0; i < pipes.length; i++) {
+        pipes[i].x -= scrollSpeed;
+
+        ctx.fillRect(pipes[i].x, 0, pipeWidth, pipes[i].top);
+        ctx.fillRect(pipes[i].x, pipes[i].bottom, pipeWidth, canvas.height - pipes[i].bottom);
+
+        if (
+          nyan.x + nyan.width > pipes[i].x &&
+          nyan.x < pipes[i].x + pipeWidth &&
+          (nyan.y < pipes[i].top || nyan.y + nyan.height > pipes[i].bottom)
+        ) {
+          isPlaying = false;
+          alert("BOOM! Skor: " + score);
+          return;
+        }
+
+        if (pipes[i].x + pipeWidth === nyan.x) {
+          score++;
+        }
+      }
 
       nyan.velocity += nyan.gravity;
       nyan.y += nyan.velocity;
@@ -136,6 +161,7 @@
       if (nyan.y + nyan.height >= canvas.height) {
         isPlaying = false;
         alert("Oyun bitti! Skor: " + score);
+        return;
       }
 
       ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
@@ -150,3 +176,11 @@
   </script>
 </body>
 </html>
+"""
+
+# Save this HTML to a file
+file_path = "/mnt/data/flappy_bcat_with_obstacles.html"
+with open(file_path, "w", encoding="utf-8") as f:
+    f.write(html_code)
+
+file_path
