--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     html, body {
       margin: 0;
       padding: 0;
-      min-height: 100%;
-      height: auto;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
+      font-family: 'Abril Fatface', cursive;
     }
+
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
+    #topTitle {
+      font-size: 3.5rem;
+      margin: 0;
+      animation: colorShift 8s ease-in-out infinite;
+      text-align: center;
+    }
+
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
@@ -27,13 +35,7 @@
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
     }
-    #topTitle {
-      font-family: 'Abril Fatface', cursive;
-      font-size: 3.5rem;
-      margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
-      text-align: center;
-    }
+
     #nyanZone {
       position: absolute;
       top: 170px;
@@ -41,8 +43,34 @@
       transform: translateX(-50%);
       z-index: 99;
     }
+
     #nyanCat {
       width: 240px;
+    }
+
+    #iconBarJS {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      display: flex;
+      gap: 20px;
+      z-index: 9999;
+      padding: 10px 15px;
+      background: rgba(255,255,255,0.3);
+      border-radius: 16px;
+      backdrop-filter: blur(5px);
+    }
+
+    #iconBarJS img {
+      width: 42px;
+      height: 42px;
+      border-radius: 8px;
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    #iconBarJS img:hover {
+      transform: scale(1.2);
+      filter: brightness(1.3);
     }
   </style>
 </head>
@@ -62,44 +90,80 @@
 
   <!-- GÖRSEL ALAN -->
   <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
+    <!-- Sol GIFLER -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Cat 1" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Cat 2" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
-        <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+
+    <!-- VİDEO -->
+    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden;">
+      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+        <source src="bcat-video-fast-optimized.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
+
+    <!-- Sağ GIFLER -->
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Cat 3" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Cat 4" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
   </section>
 
   <!-- OYUN ALANI -->
-  <section id="flappySection" style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-    <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
+  <section id="flappySection" style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px;">
+    <h2 style="color: white; font-size: 2.5rem; font-family: 'Abril Fatface', cursive;">🎂 Flappy BCAT 🎮</h2>
     <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 90vw;"></canvas>
     <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
       Score: <span id="score">0</span>
     </div>
   </section>
 
+  <!-- LOGO BAR (JS) -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const bar = document.createElement("div");
+      bar.id = "iconBarJS";
+
+      const logos = [
+        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
+        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
+        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
+        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
+      ];
+
+      logos.forEach(logo => {
+        const a = document.createElement("a");
+        a.href = logo.href;
+        a.target = "_blank";
+        const img = document.createElement("img");
+        img.src = logo.src;
+        img.alt = logo.alt;
+        a.appendChild(img);
+        bar.appendChild(a);
+      });
+
+      document.body.appendChild(bar);
+
+      const vid = document.getElementById("bcatVideo");
+      vid.playbackRate = 3.0;
+    });
+  </script>
+
+  <!-- OYUN SCRIPT -->
   <script>
     const canvas = document.getElementById("flappyCanvas");
     const ctx = canvas.getContext("2d");
 
     const bgImage = new Image();
-    bgImage.src = "u1ZpVC.png";
+    bgImage.src = "u1ZpVC.png"; // Arka plan görseli
 
     const nyanImg = new Image();
     nyanImg.src = "nyan-cat.gif";
 
     let bgX = 0;
     const scrollSpeed = 2;
-
     let score = 0;
     let isPlaying = true;
 
@@ -124,12 +188,13 @@
     function draw() {
       if (!isPlaying) return;
 
+      // Scroll arka plan
       bgX -= scrollSpeed;
       if (bgX <= -canvas.width) bgX = 0;
-
       ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
       ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
 
+      // Nyan Cat fiziği
       nyan.velocity += nyan.gravity;
       nyan.y += nyan.velocity;
 
