--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     html, body {
       margin: 0;
       padding: 0;
+      min-height: 100%;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
@@ -21,19 +22,19 @@
       100% { background-position: 0% 50%; }
     }
 
-    #topTitle {
-      font-size: 3.5rem;
-      margin: 0;
-      animation: colorShift 8s ease-in-out infinite;
-      text-align: center;
-    }
-
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
       50% { color: #a1c4fd; }
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
+    }
+
+    #topTitle {
+      font-size: 3.5rem;
+      margin: 0;
+      animation: colorShift 8s ease-in-out infinite;
+      text-align: center;
     }
 
     #nyanZone {
@@ -48,116 +49,87 @@
       width: 240px;
     }
 
-    #iconBarJS {
-      position: absolute;
-      top: 20px;
-      right: 30px;
+    #flappySection {
+      height: 100vh;
       display: flex;
-      gap: 20px;
-      z-index: 9999;
-      padding: 10px 15px;
-      background: rgba(255,255,255,0.3);
-      border-radius: 16px;
-      backdrop-filter: blur(5px);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px;
     }
 
-    #iconBarJS img {
-      width: 42px;
-      height: 42px;
+    #flappyCanvas {
+      border: 3px solid white;
+      border-radius: 10px;
+      max-width: 90vw;
+      background: black;
+    }
+
+    #scoreDisplay {
+      margin-top: 20px;
+      color: white;
+      font-size: 1.5rem;
+      font-family: monospace;
+    }
+
+    #controls {
+      margin-top: 10px;
+      display: flex;
+      gap: 10px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border: none;
       border-radius: 8px;
-      transition: transform 0.3s ease, filter 0.3s ease;
+      cursor: pointer;
     }
 
-    #iconBarJS img:hover {
-      transform: scale(1.2);
-      filter: brightness(1.3);
+    .hidden {
+      display: none;
     }
   </style>
 </head>
-
 <body>
-  <!-- BAŞLIK -->
+
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
     <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
       <h1 id="topTitle">Welcome BirthdayCat</h1>
     </div>
   </div>
 
-  <!-- NYAN CAT -->
   <div id="nyanZone">
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
-  <!-- GÖRSEL ALAN -->
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    <!-- Sol GIFLER -->
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Cat 1" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Cat 2" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-    </div>
-
-    <!-- VİDEO -->
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
-        <source src="bcat-video-fast-optimized.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </div>
-
-    <!-- Sağ GIFLER -->
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Cat 3" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Cat 4" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <!-- Oyun Alanı -->
+  <section id="flappySection">
+    <h2 style="color: white;">🎂 Flappy BCAT 🎮</h2>
+    <canvas id="flappyCanvas" width="660" height="480"></canvas>
+    <div id="scoreDisplay">Score: <span id="score">0</span></div>
+    <div id="controls">
+      <button id="startBtn">Start</button>
+      <button id="restartBtn" class="hidden">Restart</button>
+      <button id="muteBtn">Mute</button>
     </div>
   </section>
 
-  <!-- OYUN ALANI -->
-  <section id="flappySection" style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 40px;">
-    <h2 style="color: white; font-size: 2.5rem; font-family: 'Abril Fatface', cursive;">🎂 Flappy BCAT 🎮</h2>
-    <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 90vw;"></canvas>
-    <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
-      Score: <span id="score">0</span>
-    </div>
-  </section>
+  <audio id="gameMusic" loop>
+    <source src="retro-mario-theme.mp3" type="audio/mp3">
+  </audio>
 
-  <!-- LOGO BAR (JS) -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const bar = document.createElement("div");
-      bar.id = "iconBarJS";
-
-      const logos = [
-        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
-        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
-        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
-        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
-      ];
-
-      logos.forEach(logo => {
-        const a = document.createElement("a");
-        a.href = logo.href;
-        a.target = "_blank";
-        const img = document.createElement("img");
-        img.src = logo.src;
-        img.alt = logo.alt;
-        a.appendChild(img);
-        bar.appendChild(a);
-      });
-
-      document.body.appendChild(bar);
-
-      const vid = document.getElementById("bcatVideo");
-      vid.playbackRate = 3.0;
-    });
-  </script>
-
-  <!-- OYUN SCRIPT -->
   <script>
     const canvas = document.getElementById("flappyCanvas");
     const ctx = canvas.getContext("2d");
+    const startBtn = document.getElementById("startBtn");
+    const restartBtn = document.getElementById("restartBtn");
+    const muteBtn = document.getElementById("muteBtn");
+    const music = document.getElementById("gameMusic");
+    let isMuted = false;
 
     const bgImage = new Image();
-    bgImage.src = "u1ZpVC.png"; // Arka plan görseli
+    bgImage.src = "u1ZpVC.png";
 
     const nyanImg = new Image();
     nyanImg.src = "nyan-cat.gif";
@@ -165,7 +137,7 @@
     let bgX = 0;
     const scrollSpeed = 2;
     let score = 0;
-    let isPlaying = true;
+    let isPlaying = false;
 
     const nyan = {
       x: 50,
@@ -185,33 +157,56 @@
       nyan.velocity = nyan.jumpStrength;
     });
 
+    muteBtn.onclick = () => {
+      isMuted = !isMuted;
+      music.muted = isMuted;
+      muteBtn.textContent = isMuted ? "Unmute" : "Mute";
+    };
+
+    startBtn.onclick = () => {
+      startBtn.classList.add("hidden");
+      restartBtn.classList.remove("hidden");
+      score = 0;
+      nyan.y = 150;
+      nyan.velocity = 0;
+      isPlaying = true;
+      if (!isMuted) music.play();
+      draw();
+    };
+
+    restartBtn.onclick = () => {
+      score = 0;
+      nyan.y = 150;
+      nyan.velocity = 0;
+      isPlaying = true;
+      if (!isMuted) music.play();
+      draw();
+    };
+
     function draw() {
       if (!isPlaying) return;
 
-      // Scroll arka plan
       bgX -= scrollSpeed;
       if (bgX <= -canvas.width) bgX = 0;
       ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
       ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
 
-      // Nyan Cat fiziği
       nyan.velocity += nyan.gravity;
       nyan.y += nyan.velocity;
 
       if (nyan.y + nyan.height >= canvas.height) {
         isPlaying = false;
+        music.pause();
         alert("Oyun bitti! Skor: " + score);
+        return;
       }
 
       ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
+      score++;
       document.getElementById("score").textContent = score;
 
       requestAnimationFrame(draw);
     }
-
-    bgImage.onload = () => {
-      draw();
-    };
   </script>
 </body>
 </html>
