--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
-      font-family: 'Abril Fatface', cursive;
+      overflow-x: hidden;
     }
-
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
@@ -29,14 +27,13 @@
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
     }
-
     #topTitle {
+      font-family: 'Abril Fatface', cursive;
       font-size: 3.5rem;
       margin: 0;
       animation: colorShift 8s ease-in-out infinite;
       text-align: center;
     }
-
     #nyanZone {
       position: absolute;
       top: 170px;
@@ -44,55 +41,55 @@
       transform: translateX(-50%);
       z-index: 99;
     }
-
     #nyanCat {
       width: 240px;
     }
-
+    #iconBarJS {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      display: flex;
+      gap: 20px;
+      z-index: 9999;
+      padding: 10px 15px;
+      background: rgba(255,255,255,0.3);
+      border-radius: 16px;
+      backdrop-filter: blur(5px);
+    }
     #flappySection {
       height: 100vh;
       display: flex;
-      justify-content: center;
-      align-items: center;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       padding: 20px;
     }
-
     #flappyCanvas {
       border: 3px solid white;
       border-radius: 10px;
       max-width: 90vw;
-      background: black;
     }
-
     #scoreDisplay {
       margin-top: 20px;
       color: white;
       font-size: 1.5rem;
       font-family: monospace;
     }
-
-    #controls {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1rem;
+    #muteBtn {
+      position: absolute;
+      left: 30px;
+      top: 20px;
+      z-index: 9999;
+      font-size: 1.5rem;
+      background: white;
       border: none;
       border-radius: 8px;
+      padding: 5px 10px;
       cursor: pointer;
-    }
-
-    .hidden {
-      display: none;
     }
   </style>
 </head>
 <body>
-
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
     <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
       <h1 id="topTitle">Welcome BirthdayCat</h1>
@@ -103,30 +100,55 @@
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
-  <!-- Oyun Alanı -->
+  <!-- OYUN ALANI -->
   <section id="flappySection">
-    <h2 style="color: white;">🎂 Flappy BCAT 🎮</h2>
+    <button id="muteBtn">🔊</button>
+    <h2 style="color: white; font-family: 'Abril Fatface', cursive;">🎂 Flappy BCAT 🎮</h2>
     <canvas id="flappyCanvas" width="660" height="480"></canvas>
     <div id="scoreDisplay">Score: <span id="score">0</span></div>
-    <div id="controls">
-      <button id="startBtn">Start</button>
-      <button id="restartBtn" class="hidden">Restart</button>
-      <button id="muteBtn">Mute</button>
-    </div>
   </section>
 
-  <audio id="gameMusic" loop>
-    <source src="retro-mario-theme.mp3" type="audio/mp3">
-  </audio>
+  <!-- LOGO BAR -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const bar = document.createElement("div");
+      bar.id = "iconBarJS";
+      const logos = [
+        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
+        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
+        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
+        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
+      ];
+      logos.forEach(logo => {
+        const a = document.createElement("a");
+        a.href = logo.href;
+        a.target = "_blank";
+        const img = document.createElement("img");
+        img.src = logo.src;
+        img.alt = logo.alt;
+        img.style.width = "42px";
+        img.style.height = "42px";
+        img.style.borderRadius = "8px";
+        img.style.transition = "transform 0.3s ease, filter 0.3s ease";
+        img.onmouseover = () => {
+          img.style.transform = "scale(1.2)";
+          img.style.filter = "brightness(1.3)";
+        };
+        img.onmouseout = () => {
+          img.style.transform = "scale(1)";
+          img.style.filter = "brightness(1)";
+        };
+        a.appendChild(img);
+        bar.appendChild(a);
+      });
+      document.body.appendChild(bar);
+    });
+  </script>
 
+  <!-- OYUN SCRIPT -->
   <script>
     const canvas = document.getElementById("flappyCanvas");
     const ctx = canvas.getContext("2d");
-    const startBtn = document.getElementById("startBtn");
-    const restartBtn = document.getElementById("restartBtn");
-    const muteBtn = document.getElementById("muteBtn");
-    const music = document.getElementById("gameMusic");
-    let isMuted = false;
 
     const bgImage = new Image();
     bgImage.src = "u1ZpVC.png";
@@ -134,10 +156,21 @@
     const nyanImg = new Image();
     nyanImg.src = "nyan-cat.gif";
 
+    const jumpSound = new Audio("jump.mp3");
+    jumpSound.volume = 0.5;
+    let muted = false;
+
+    const muteBtn = document.getElementById("muteBtn");
+    muteBtn.addEventListener("click", () => {
+      muted = !muted;
+      muteBtn.textContent = muted ? "🔇" : "🔊";
+    });
+
     let bgX = 0;
     const scrollSpeed = 2;
+
     let score = 0;
-    let isPlaying = false;
+    let isPlaying = true;
 
     const nyan = {
       x: 50,
@@ -150,38 +183,14 @@
     };
 
     document.addEventListener("keydown", (e) => {
-      if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
+      if (e.code === "Space") jump();
     });
+    canvas.addEventListener("click", jump);
 
-    canvas.addEventListener("click", () => {
+    function jump() {
       nyan.velocity = nyan.jumpStrength;
-    });
-
-    muteBtn.onclick = () => {
-      isMuted = !isMuted;
-      music.muted = isMuted;
-      muteBtn.textContent = isMuted ? "Unmute" : "Mute";
-    };
-
-    startBtn.onclick = () => {
-      startBtn.classList.add("hidden");
-      restartBtn.classList.remove("hidden");
-      score = 0;
-      nyan.y = 150;
-      nyan.velocity = 0;
-      isPlaying = true;
-      if (!isMuted) music.play();
-      draw();
-    };
-
-    restartBtn.onclick = () => {
-      score = 0;
-      nyan.y = 150;
-      nyan.velocity = 0;
-      isPlaying = true;
-      if (!isMuted) music.play();
-      draw();
-    };
+      if (!muted) jumpSound.play();
+    }
 
     function draw() {
       if (!isPlaying) return;
@@ -196,17 +205,19 @@
 
       if (nyan.y + nyan.height >= canvas.height) {
         isPlaying = false;
-        music.pause();
         alert("Oyun bitti! Skor: " + score);
         return;
       }
 
       ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
-      score++;
       document.getElementById("score").textContent = score;
 
       requestAnimationFrame(draw);
     }
+
+    bgImage.onload = () => {
+      draw();
+    };
   </script>
 </body>
 </html>
